test/libsolidity/syntaxTests/nameAndTypeResolution/276_invalid_types_in_inline_array.sol
contract C {
    function f() public {
        uint[3] memory x = [45, 'foo', true];
    }
}
// ----
// TypeError: (66-83): Unable to deduce common type for array elements.
